# Flappy_Bird_SFML_game

./: .gitignore  CMakeLists.txt  README.md
include/: Bird.hpp  BirdCollider.hpp  BirdPipeCollider.hpp  Counter.hpp  GameState.hpp  MenuState.hpp  Pipe.hpp  PipeManager.hpp  State.hpp  StateManager.hpp
src/: Bird.cpp  BirdCollider.cpp  BirdPipeCollider.cpp  Counter.cpp  GameState.cpp  MenuState.cpp  Pipe.cpp  PipeManager.cpp  main.cpp
